# ai_playground

./: LICENSE  README.md
a2a-tutorial/: README.md  main.py  pyproject.toml
agent-tutorial/: main.ipynb  main.py  pyproject.toml
chatgpt-agent/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-memory.db  chat-gpt-memory.db-shm  chat-gpt-memory.db-wal  dummy-agent-handsoff.ipynb  dummy-agent-raw-response.ipynb  dummy-agent-session-memory.ipynb  dummy-agent-structured-output.ipynb  dummy-agent-viz.ipynb  dummy-agent.ipynb  main.py  pyproject.toml
content-pipeline-agent/: cpr_training.html  crewai_flow.html  main.py  models.py  pyproject.toml  seo_crew.py  tools.py
customer-support-agent/: customer-support-memory.db  customer-support-memory.db-shm  customer-support-memory.db-wal  main.py  models.py  pyproject.toml  voice.py  workflow.py
deep-research-agent/: deep-research-tem.ipynb  email-optimizer-team.ipynb  pyproject.toml  report.md  tools.py
deploy-agent/: README.md  api.http  main.py  pyproject.toml
email-refiner-agent/: pyproject.toml
financial-analyst/: pyproject.toml  tools.py
job-hunter-agent/: main.py  pyproject.toml
langGraph_tutorial/: cache_test.ipynb  chatbot.ipynb  command.ipynb  conditional_edge.ipynb  human-in-the-loop.ipynb  main.ipynb  main.py  memory.db-shm  memory.db-wal  pyproject.toml  send.ipynb  time_travel.ipynb
multi-agent-architecture/: README.md  langgraph.json  main.ipynb  main.py  network_agent.ipynb  pyproject.toml  superviser_with_prebuild.ipynb  supervisor_agent.py  supervisor_as_tool.py
(+77 files in other folders)
