[project]
name = "chatgpt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "openai-agents>=0.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
